added apply now links

--- a/index.html
+++ b/index.html
@@ -30,15 +30,13 @@
                     <header class="navbar">
                         <section class="navbar-section">
                             <a class="navbar-brand logo" href="./">
-                                <img class="logo-img" src="./images/database-clipart-3.jpg" alt=""><span>Mainframe@Berkeley</span>
+                                <img class="logo-img" src="./images/database-white.png" alt=""><span>Mainframe@Berkeley</span>
                             </a>
                         </section>
                         <section class="navbar-section hide-sm">
-                            <a class="btn btn-link" href="#we-do">What we do</a>
-                            <!-- <a class="btn btn-link" href="#we-work">How we work</a>
-                            <a class="btn btn-link" href="#price">Pricing</a> -->
+                            <a class="btn btn-link" href="#we-do">Projects</a>
                             <a class="btn btn-link" href="#team">Our Team</a>
-                            <a class="btn btn-primary btn-hire-me" href="#" >Join Us</a>
+                            <a class="btn btn-primary btn-hire-me" href="https://priyammohanty.typeform.com/to/Yldb28" >Apply</a>
                         </section>
                     </header>
                 </div>
@@ -64,37 +62,6 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="yeo-client">
-            <div class="container yeo-client-list">
-                <div class="columns">
-                    <div class="column col-12">
-                        <h3 class="feature-title">
-                        Trusted By The Best Clients
-                    </h3>
-                        <div class="client-logo">
-                            <a href="#" target="_blank">
-                            <img src="./images/algolia.svg" height="40px" alt="">
-                        </a>
-                            <a href="#" target="_blank">
-                            <img src="./images/lapa-logo.svg" height="40px" alt="">
-                        </a>
-                            <a href="#" target="_blank">
-                            <img src="./images/hugo.svg" height="40px" alt="">
-                        </a>
-                            <a href="#" target="_blank">
-                            <img src="./images/codecademy.svg" height="40px" alt="">
-                        </a>
-                            <a href="#" target="_blank">
-                            <img src="./images/aws.svg" height="40px" alt="">
-                        </a>
-                            <a href="#" target="_blank">
-                            <img src="./images/stripe.svg" height="40px" alt="">
-                        </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
         <div class="yeo-do" id="we-do">
             <div class="container yeo-body">
                 <div class="columns">
@@ -208,23 +175,23 @@
                     </div>
                     <div class="column col-4 col-sm-12">
                         <a href=""><img class="s-circle" src="./images/team-1.jpg" alt=""></a>
-                        <a href="https://www.lapa.ninja/"><span class="name">Duy Nguyen</span></a>
+                        <a href="#"><span class="name">Duy Nguyen</span></a>
                         <span class="title">Co-President</span>
                     </div>
                     <div class="column col-4 col-sm-12">
                         <a href=""><img class="s-circle" src="./images/team-2.jpg" alt=""></a>
-                        <a href="https://www.lapa.ninja/"><span class="name">Priyam Mohanty</span></a>
+                        <a href="#"><span class="name">Priyam Mohanty</span></a>
                         <span class="title">Co-President</span>
                     </div>
                     <div class="column col-4 col-sm-12">
                         <a href=""><img class="s-circle" src="./images/dre.png" alt=""></a>
-                        <a href="https://www.lapa.ninja/"><span class="name">Dre Mahaarachchi</span></a>
-                        <span class="title">Exec/Dev</span>
+                        <a href="#"><span class="name">Dre Mahaarachchi</span></a>
+                        <span class="title">Exec/Developer</span>
                     </div>
                     <div class="column col-4 col-sm-12">
                         <a href=""><img class="s-circle" src="./images/team-1.jpg" alt=""></a>
-                        <a href="https://www.lapa.ninja/"><span class="name">Stephanie Stickel</span></a>
-                        <span class="title">Exec/Dev</span>
+                        <a href="#"><span class="name">Stephanie Stickel</span></a>
+                        <span class="title">Exec/Developer</span>
                     </div>
                 </div>
             </div>
@@ -233,16 +200,18 @@
             <div class="container yeo-body">
                 <div class="columns">
                     <div class="column col-12">
-                        <h2 class="feature-title">We love Open Source</h2>
+                        <h2 class="feature-title">Recruiting</h2>
                     </div>
                     <div class="column col-10 centered col-sm-12">
                         <img class="open-source-img" src="./images/open-source.svg" alt="">
                         <h2 class="open-source-feature">
-                        We're making 
+                        We're now
                         <br />
-                        Open Source Software
+                        recruiting.
                     </h2>
-                        <a href="#" class="btn btn-lg btn-open-source">Follow us on Github</a>
+                        <h6>Applications close February 8th.</h6>
+                        <br />
+                        <a href="https://priyammohanty.typeform.com/to/Yldb28" class="btn btn-lg btn-open-source">Apply now!</a>
                     </div>
                 </div>
             </div>
@@ -250,28 +219,23 @@
         <div class="yeo-footer">
             <div class="container">
                 <div class="columns">
+                    
                     <div class="column col-4 col-sm-6">
                         <div class="yeo-footer-content">
-                            <h4>Services</h4>
+                            <h4>Clients</h4>
                             <ul class="nav">
                                 <li class="nav-item">
-                                    <a href="https://www.lapa.ninja/">DevOps</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="https://www.lapa.ninja/">Development</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="https://www.lapa.ninja/">Consultant</a>
+                                    <a href="https://www.medinashealth.com/">Medinas Health</a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                     <div class="column col-4 col-sm-6">
                         <div class="yeo-footer-content">
-                            <h4>Clients</h4>
+                            <h4>Involvement</h4>
                             <ul class="nav">
                                 <li class="nav-item">
-                                    <a href="https://www.lapa.ninja/">Medinas Health</a>
+                                    <a href="https://priyammohanty.typeform.com/to/Yldb28">Apply</a>
                                 </li>
                             </ul>
                         </div>
@@ -281,10 +245,7 @@
                             <h4>Contact Us</h4>
                             <ul class="nav">
                                 <li class="nav-item">
-                                    <a href="https://www.lapa.ninja/">Twitter</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="https://www.lapa.ninja/">Github</a>
+                                    <a href="https://www.linkedin.com/company/berkeley-mainframe/">LinkedIn</a>
                                 </li>
                             </ul>
                         </div>
