--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <header class="navbar">
                         <section class="navbar-section">
                             <a class="navbar-brand logo" href="./">
-                                <img class="logo-img" src="./images/database-white.png" alt=""><span>Mainframe@Berkeley</span>
+                                <span>Mainframe@Berkeley</span>
                             </a>
                         </section>
                         <section class="navbar-section hide-sm">
