--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         <span class="title">Co-President</span>
                     </div>
                     <div class="column col-4 col-sm-12">
-                        <a href=""><img class="s-circle" src="./images/team-2.jpg" alt=""></a>
+                        <a href=""><img class="s-circle" src="./images/priyam.jpg" alt=""></a>
                         <a href="#"><span class="name">Priyam Mohanty</span></a>
                         <span class="title">Co-President</span>
                     </div>
@@ -189,7 +189,7 @@
                         <span class="title">Exec/Developer</span>
                     </div>
                     <div class="column col-4 col-sm-12">
-                        <a href=""><img class="s-circle" src="./images/team-1.jpg" alt=""></a>
+                        <a href=""><img class="s-circle" src="./images/stephanie.jpg" alt=""></a>
                         <a href="#"><span class="name">Stephanie Stickel</span></a>
                         <span class="title">Exec/Developer</span>
                     </div>
