--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@
                     <div class="column col-4 col-sm-12">
                         <a href=""><img class="s-circle" src="./images/dre.png" alt=""></a>
                         <a href="#"><span class="name">Dre Mahaarachchi</span></a>
-                        <span class="title">Exec/Developer</span>
+                        <span class="title">Technical Project Manager</span>
                     </div>
                     <div class="column col-4 col-sm-12">
                         <a href=""><img class="s-circle" src="./images/stephanie.jpg" alt=""></a>
                         <a href="#"><span class="name">Stephanie Stickel</span></a>
-                        <span class="title">Exec/Developer</span>
+                        <span class="title">Technical Project Manager</span>
                     </div>
                 </div>
             </div>
