--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                             <span class="slogan-bold">A UC Berkeley</span>
                             <span class="slogan-bold">Organization</span>
                         </h1>
-                        <p>Mainframe is a software development club that is committed to creating ideas that aimed at the benefit of the community and society. We aim to work with organizations who want to empower people with their products and platforms. We also aim to empower our members with practical skills and technical prowess for a future in technology.</p>
-                        <a class="btn btn-primary btn-lg btn-start" target="_blank" href="#y">Work with us</a>
+                        <p>Mainframe is a software development club committed to creating ideas aimed at the benefit of the community and society. We aim to work with local organizations who want to benefit people through their products and platforms. We also aim to empower our members with practical skills and technical prowess for a future in technology while providing them a safe community in which they can thrive.</p>
+                        <a class="btn btn-primary btn-lg btn-start" target="_blank" href="https://priyammohanty.typeform.com/to/Yldb28">Work with us</a>
 
                     </div>
                 </div>
