--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
                     <div class="column col-12 col-sm-12">
                         <div class="yeo-do-content"></a>
                             <a href="https://www.medinashealth.com/"><img src="./images/Medinas-logo-dark.png" alt=""></a>
-                            <h3>Software Development and Data Analysis</h3>
+                        <h2>Medinas Health</h2>
+                            <h4>Software Development and Data Analysis</h3>
+                        <p> Medinas Health is a local software company that uses automation and machine learning to capture and resell unused medical assets to hospitals, medical clinics.
+                        </p>
                             
                         </div>
                     </div>
