--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <a href="https://www.medinashealth.com/"><img src="./images/Medinas-logo-dark.png" alt=""></a>
                         <h2>Medinas Health</h2>
                             <h4>Software Development and Data Analysis</h3>
-                        <p> Medinas Health is a local software company that uses automation and machine learning to capture and resell unused medical assets to hospitals, medical clinics.
+                        <p> Medinas Health is a local software company that uses automation and machine learning <br />to capture and resell unused medical assets to hospitals and medical clinics.
                         </p>
                             
                         </div>
