--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <section class="navbar-section hide-sm">
                             <a class="btn btn-link" href="#we-do">Projects</a>
                             <a class="btn btn-link" href="#team">Our Team</a>
-                            <a class="btn btn-primary btn-hire-me" href="https://priyammohanty.typeform.com/to/Yldb28" >Apply</a>
+                            <a class="btn btn-primary btn-hire-me" href="https://berkeleymainframe.typeform.com/to/Yldb28" >Apply</a>
                         </section>
                     </header>
                 </div>
@@ -52,7 +52,7 @@
                             <span class="slogan-bold">Organization</span>
                         </h1>
                         <p>Mainframe is a software development club committed to creating ideas aimed at the benefit of the community and society. We aim to work with local organizations who want to benefit people through their products and platforms. We also aim to empower our members with practical skills and technical prowess for a future in technology while providing them a safe community in which they can thrive.</p>
-                        <a class="btn btn-primary btn-lg btn-start" target="_blank" href="https://priyammohanty.typeform.com/to/Yldb28">Work with us</a>
+                        <a class="btn btn-primary btn-lg btn-start" target="_blank" href="https://berkeleymainframe.typeform.com/to/Yldb28">Work with us</a>
 
                     </div>
                 </div>
@@ -215,7 +215,7 @@
                     </h2>
                         <h6>Applications close February 8th.</h6>
                         <br />
-                        <a href="https://priyammohanty.typeform.com/to/Yldb28" class="btn btn-lg btn-open-source">Apply now!</a>
+                        <a href="https://berkeleymainframe.typeform.com/to/Yldb28" class="btn btn-lg btn-open-source">Apply now!</a>
                     </div>
                 </div>
             </div>
@@ -239,7 +239,7 @@
                             <h4>Involvement</h4>
                             <ul class="nav">
                                 <li class="nav-item">
-                                    <a href="https://priyammohanty.typeform.com/to/Yldb28">Apply</a>
+                                    <a href="https://berkeleymainframe.typeform.com/to/Yldb28">Apply</a>
                                 </li>
                             </ul>
                         </div>
