added duys picture

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         <span class="title">Co-President</span>
                     </div>
                     <div class="column col-4 col-sm-12">
-                        <a href=""><img class="s-circle" src="./images/team-1.jpg" alt=""></a>
+                        <a href=""><img class="s-circle" src="./images/duy.jpg" alt=""></a>
                         <a href="#"><span class="name">Duy Nguyen</span></a>
                         <span class="title">Co-President</span>
                     </div>
