updated pos names

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <div class="column col-4 col-sm-12">
                         <a href=""><img class="s-circle" src="./images/duy.jpg" alt=""></a>
                         <a href="#"><span class="name">Duy Nguyen</span></a>
-                        <span class="title">Co-President</span>
+                        <span class="title">VP of Operations</span>
                     </div>
                     
                     <div class="column col-4 col-sm-12">
