--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Mainframe at Berkeley</title>
+    <title>Mainframe @ Berkeley</title>
     <meta name="keywords" content="yeo">
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,400,700" rel="stylesheet">
     <link rel="stylesheet" href="./css/spectre.css">
@@ -36,7 +36,7 @@
                         <section class="navbar-section hide-sm">
                             <a class="btn btn-link" href="#we-do">Projects</a>
                             <a class="btn btn-link" href="#team">Our Team</a>
-                            <a class="btn btn-primary btn-hire-me" href="https://berkeleymainframe.typeform.com/to/Yldb28" >Apply</a>
+                            <a class="btn btn-primary btn-hire-me" href="https://berkeleymainframe.typeform.com/to/Yldb28" >Interested?</a>
                         </section>
                     </header>
                 </div>
@@ -69,10 +69,10 @@
                         <h2 class="feature-title">This Semester's Projects</h2>
                     </div>
                     <div class="column col-12 col-sm-12">
-                        <div class="yeo-do-content"></a>
+                        <div class="yeo-do-content"></div>
                             <a href="https://www.medinashealth.com/"><img src="./images/Medinas-logo-dark.png" alt=""></a>
                         <h2>Medinas Health</h2>
-                            <h4>Software Development and Data Analysis</h3>
+                            <h4>Software Development and Data Analysis</h4>
                         <p> Medinas Health is a local software company that uses automation and machine learning <br />to capture and resell unused medical assets to hospitals and medical clinics.
                         </p>
                             
@@ -209,11 +209,11 @@
                     <div class="column col-10 centered col-sm-12">
                         <img class="open-source-img" src="./images/open-source.svg" alt="">
                         <h2 class="open-source-feature">
-                        We're now
+                        We're done
                         <br />
                         recruiting.
                     </h2>
-                        <h6>Applications close February 7th.</h6>
+                        <h6>Apply again next semester! Fill out this form if interested.</h6>
                         <br />
                         <a href="https://berkeleymainframe.typeform.com/to/Yldb28" class="btn btn-lg btn-open-source">Apply now!</a>
                     </div>
