--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     <div class="column col-4 col-sm-12">
                         <a href=""><img class="s-circle" src="./images/priyam.jpg" alt=""></a>
                         <a href="#"><span class="name">Priyam Mohanty</span></a>
-                        <span class="title">Co-President</span>
+                        <span class="title">President</span>
                     </div>
                     <div class="column col-4 col-sm-12">
                         <a href=""><img class="s-circle" src="./images/duy.jpg" alt=""></a>
